@@ -1,3 +1,7 @@
+2008-03-19  Ben Abbott  <bpabbott@mac.com>
+	
+	* statistics/base/mode.m: Add NDArray tests.
+
 2008-03-19  Jaroslav Hajek <highegg@gmail.com>
 
 	* statistics/distributions/exppdf.m,
@@ -6,6 +10,8 @@
 	statistics/distributions/exprnd.m: Doc fix.
 
 2008-03-19  David Bateman  <dbateman@free.fr>
+
+	* statistics/base/mode.m: Fix for row vectors.
 
 	* plot/__scatter__.m: Modify for change of markersize in
 	__go_draw_axes__.m and for compatibility.
